@@ -61,13 +61,24 @@
 {_it./policy-marker&&_it:/wrap-policy-marker||}
 {_it./contact-info&&_it:/wrap-contact-info||}
 {_it./related-activity&&_it:/wrap-related-activity||}
-{_it./activity-status&&_it:/wrap-activity-status||}
+{_it./activity-status@code&&_it:/wrap-activity-status||}
 </div>
 
 #^/wrap-activity-status	<!--	ACTIVITY STATUS WRAPPER	-->
-	<div class="wrap_activity_status">
-		{_it.@code-name||}
+	<div class="wrap_activity_status" style="background-color:{/status-back.1};">
+		<span>activity status:</span> {_it./activity-status@code-name||}
+		<div class="status_desc">{_it./activity-status@code-description||}</div>
 	</div>
+	
+#^/status-back form=json
+{
+	1:"#f0f",
+	2:"#fff",
+	3:"#000",
+	4:"#3f0",
+	5:"#f46",
+	6:"#0f0"
+}
 
 #^/wrap-contact-info	<!--	CONTACT INFO WRAPPER	-->
 	<div class="wrap_contact_info">
