@@ -6,6 +6,7 @@ Add tag to new SAVi
 Update css
 Add related-activity
 Add activity-status
+Add json chunk for activity-status-back
 
 
 Development Portal (2020-02-05 shi)
